--- a/application/admin/view/common/header.html
+++ b/application/admin/view/common/header.html
@@ -90,13 +90,7 @@
                     <li class="user-body">
                         <div class="row">
                             <div class="col-xs-4 text-center">
-                                <a href="http://www.fastadmin.net" target="_blank">官网</a>
-                            </div>
-                            <div class="col-xs-4 text-center">
-                                <a href="http://forum.fastadmin.net" target="_blank">论坛</a>
-                            </div>
-                            <div class="col-xs-4 text-center">
-                                <a href="http://doc.fastadmin.net" target="_blank">文档</a>
+                                <a href="http://ohao.ren" target="_blank">技术支持</a>
                             </div>
                         </div>
                     </li>
