--- a/application/index/view/layout/default.html
+++ b/application/index/view/layout/default.html
@@ -54,12 +54,11 @@
             </div>
         </nav>
 
-        <main class="content">
-            {__CONTENT__}
-        </main>
+        {__CONTENT__}
 
         <footer class="footer" style="clear:both">
-            <p class="copyright">Copyright&nbsp;©&nbsp;2017-2018 fastadmin.net All Rights Reserved {$site.name} {:__('Copyrights')} <a href="http://www.miibeian.gov.cn" target="_blank">{$site.beian}</a></p>
+            
+            <p class="address">Copyright&nbsp;©&nbsp;2017-2018 fastadmin.net All Rights Reserved {$site.name} {:__('Copyrights')} <a href="http://www.miibeian.gov.cn" target="_blank">{$site.beian}</a></p>
         </footer>
 
         {include file="common/script" /}
