--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -26,7 +26,7 @@
             <footer class="main-footer hide">
                 <div class="pull-right hidden-xs">
                 </div>
-                <strong>Copyright &copy; 2017-2018 <a href="https://www.fastadmin.net">Fastadmin</a>.</strong> All rights reserved.
+                <strong>Copyright &copy; 2017-2018 <a href="//service.knocks.tech">长安大学易班工作站</a>.</strong> All rights reserved.
             </footer>
 
             <!-- 右侧控制栏 -->
