--- a/application/index/view/layout/common.html
+++ b/application/index/view/layout/common.html
@@ -9,7 +9,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>FastAdmin - {:__('The fastest framework based on ThinkPHP5 and Bootstrap')}</title>
+        <title>长大易班 - powered by 长安大学易班工作站</title>
 
         <!-- Bootstrap Core CSS -->
         <link href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -46,18 +46,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="http://www.fastadmin.net">FastAdmin</a>
+                    <a class="navbar-brand" href="//service.knocks.tech">长大易班</a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav pull-right">
-                        <li><a href="http://www.fastadmin.net" target="_blank">{:__('Home')}</a></li>
-                        <li><a href="http://www.fastadmin.net/store.html" target="_blank">{:__('Store')}</a></li>
-                        <li><a href="http://www.fastadmin.net/service.html" target="_blank">{:__('Services')}</a></li>
-                        <li><a href="http://www.fastadmin.net/download.html" target="_blank">{:__('Download')}</a></li>
-                        <li><a href="http://www.fastadmin.net/demo.html" target="_blank">{:__('Demo')}</a></li>
-                        <li><a href="http://www.fastadmin.net/donate.html" target="_blank">{:__('Donation')}</a></li>
-                        <li><a href="http://forum.fastadmin.net" target="_blank">{:__('Forum')}</a></li>
-                        <li><a href="http://doc.fastadmin.net" target="_blank">{:__('Docs')}</a></li>
+                        <li><a href="//service.knocks.tech" target="_blank">{:__('Home')}</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -70,18 +63,7 @@
 
         <footer>
             <div class="container">
-                <p>&copy; 2017 FastAdmin. All Rights Reserved.</p>
-                <ul class="list-inline">
-                    <li>
-                        <a href="https://gitee.com/karson/fastadmin">{:__('Gitee')}</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/karsonzhang/fastadmin">{:__('Github')}</a>
-                    </li>
-                    <li>
-                        <a href="http://shang.qq.com/wpa/qunwpa?idkey=46c326e570d0f97cfae1f8257ae82322192ec8841c79b2136446df0b3b62028c">{:__('QQ group')}</a>
-                    </li>
-                </ul>
+                <p>&copy; 2017-2018 长安大学易班工作站</p>
             </div>
         </footer>
 
