--- a/application/index/view/layout/default.html
+++ b/application/index/view/layout/default.html
@@ -20,14 +20,7 @@
                 </div>
                 <div class="collapse navbar-collapse" id="header-navbar">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="http://www.fastadmin.net" target="_blank">{:__('Home')}</a></li>
-                        <li><a href="http://www.fastadmin.net/store.html" target="_blank">{:__('Store')}</a></li>
-                        <li><a href="http://www.fastadmin.net/service.html" target="_blank">{:__('Services')}</a></li>
-                        <li><a href="http://www.fastadmin.net/download.html" target="_blank">{:__('Download')}</a></li>
-                        <li><a href="http://www.fastadmin.net/demo.html" target="_blank">{:__('Demo')}</a></li>
-                        <li><a href="http://www.fastadmin.net/donate.html" target="_blank">{:__('Donation')}</a></li>
-                        <li><a href="http://forum.fastadmin.net" target="_blank">{:__('Forum')}</a></li>
-                        <li><a href="http://doc.fastadmin.net" target="_blank">{:__('Docs')}</a></li>
+                        <li><a href="//service.knocks.teck" target="_blank">{:__('Home')}</a></li>
                         <li class="dropdown">
                             {if $user}
                             <a href="{:url('user/index')}" class="dropdown-toggle" data-toggle="dropdown" style="padding-top: 10px;height: 50px;">
@@ -58,7 +51,7 @@
 
         <footer class="footer" style="clear:both">
             
-            <p class="address">Copyright&nbsp;©&nbsp;2017-2018 fastadmin.net All Rights Reserved {$site.name} {:__('Copyrights')} <a href="http://www.miibeian.gov.cn" target="_blank">{$site.beian}</a></p>
+            <p class="address">Copyright&nbsp;©&nbsp;2017-2018 长安大学易班工作站 All Rights Reserved {$site.name} {:__('Copyrights')} <a href="http://www.miibeian.gov.cn" target="_blank">{$site.beian}</a></p>
         </footer>
 
         {include file="common/script" /}
