--- a/application/admin/view/dormitory/select/index.html
+++ b/application/admin/view/dormitory/select/index.html
@@ -20,9 +20,11 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="form-inline" data-toggle="cxselect" data-selects="building,dormitory">
-                        <select class="building form-control" name="building" data-url="dormitory/Select/building"></select>
-                        <select class="dormitory form-control" name="dormitory" data-url="dormitory/Select/dormitory"></select>
+                    <div class="col-xs-9"></div>
+                        <div class="form-inline" data-toggle="cxselect" data-selects="building,dormitory">
+                            <select class="building form-control" name="building" data-url="dormitory/Select/building"></select>
+                            <select class="dormitory form-control" name="dormitory" data-url="dormitory/Select/dormitory"></select>
+                        </div>
                     </div>
                     <table id="table" class="table table-striped table-bordered table-hover" 
                            data-operate-edit="{:$auth->check('dormitory/dormitory/edit')}" 
