--- a/application/admin/view/dormitory/dormitorylist/index.html
+++ b/application/admin/view/dormitory/dormitorylist/index.html
@@ -6,7 +6,7 @@
             <div class="tab-pane fade active in" id="one">
                 <div class="widget-body no-padding">
                     <div id="toolbar" class="toolbar">
-                        <a href="javascript:;" class="btn btn-primary btn-refresh" title="{:__('Refresh')}" ><i class="fa fa-refresh"></i> </a>
+                        <!-- <a href="javascript:;" class="btn btn-primary btn-refresh" title="{:__('Refresh')}" ><i class="fa fa-refresh"></i> </a>
                         <a href="javascript:;" class="btn btn-success btn-add {:$auth->check('dormitory/dormitory/add')?'':'hide'}" title="{:__('Add')}" ><i class="fa fa-plus"></i> {:__('Add')}</a>
                         <a href="javascript:;" class="btn btn-success btn-edit btn-disabled disabled {:$auth->check('dormitory/dormitory/edit')?'':'hide'}" title="{:__('Edit')}" ><i class="fa fa-pencil"></i> {:__('Edit')}</a>
                         <a href="javascript:;" class="btn btn-danger btn-del btn-disabled disabled {:$auth->check('dormitory/dormitory/del')?'':'hide'}" title="{:__('Delete')}" ><i class="fa fa-trash"></i> {:__('Delete')}</a>
@@ -18,7 +18,7 @@
                                 <li><a class="btn btn-link btn-multi btn-disabled disabled" href="javascript:;" data-params="status=normal"><i class="fa fa-eye"></i> {:__('Set to normal')}</a></li>
                                 <li><a class="btn btn-link btn-multi btn-disabled disabled" href="javascript:;" data-params="status=hidden"><i class="fa fa-eye-slash"></i> {:__('Set to hidden')}</a></li>
                             </ul>
-                        </div>
+                        </div> -->
                     </div>
                     <table id="table" class="table table-striped table-bordered table-hover" 
                            data-operate-edit="{:$auth->check('dormitory/dormitory/edit')}" 
@@ -52,17 +52,9 @@
                 <div class="col-xs-12 col-sm-6 col-md-3">
                     <div class="form-group">
                         <label class="control-label">宿舍号</label>
-                        <!--显式的operate操作符-->
-                        <div class="input-group">
-                            <div class="input-group-btn">
-                                <select class="form-control operate" data-name="SSH" style="width:auto;">
-                                    <option value="=" selected>等于</option>
-                                    <option value=">">大于</option>
-                                    <option value="<">小于</option>
-                                </select>
-                            </div>
-                            <input class="form-control" type="text" name="SSH" placeholder="" value=""/>
-                        </div>
+                        <!--隐式的operate操作符，必须携带一个class为operate隐藏的文本框,且它的data-name="字段",值为操作符-->
+                        <input class="operate" type="hidden" data-name="SSH" value="="/>
+                        <input class="form-control" type="text" name="SSH" placeholder="请输入查找的宿舍号" value=""/>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-3">
@@ -73,25 +65,6 @@
                         <input class="form-control" type="text" name="CH" placeholder="请输入查找的床号" value=""/>
                     </div>
                 </div>
-                
-                <!-- <div class="col-xs-12 col-sm-6 col-md-3">
-                    <div class="form-group">
-                        <label class="control-label">学院</label>
-                        <div class="row" data-toggle="cxselect" data-selects="group,admin">
-                            <div class="col-xs-6">
-                                <select class="group form-control" name="group"
-                                        data-url="example/bootstraptable/cxselect?type=group"></select>
-                            </div>
-                            <div class="col-xs-6">
-                                <select class="admin form-control" name="admin_id"
-                                        data-url="example/bootstraptable/cxselect?type=admin"
-                                        data-query-name="group_id"></select>
-                            </div>
-                            <input type="hidden" class="operate" data-name="admin_id" value="="/>
-                        </div>
-                    </div>
-                </div> -->
-
                 <div class="col-xs-12 col-sm-6 col-md-3">
                     <div class="form-group">
                         <label class="control-label">学院</label>
