--- a/application/admin/view/bx/repairworker/add.html
+++ b/application/admin/view/bx/repairworker/add.html
@@ -1,21 +1,15 @@
 <form id="add-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
 
     <div class="form-group">
-        <label for="c-name" class="control-label col-xs-12 col-sm-2">{:__('Name')}:</label>
+        <label for="c-name" class="control-label col-xs-12 col-sm-2">{:__('姓名')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-name" data-rule="required" class="form-control" name="row[name]" type="text">
         </div>
     </div>
     <div class="form-group">
-        <label for="c-mobile" class="control-label col-xs-12 col-sm-2">{:__('Mobile')}:</label>
+        <label for="c-mobile" class="control-label col-xs-12 col-sm-2">{:__('联系方式')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-mobile" data-rule="required" class="form-control" name="row[mobile]" type="text">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-category_id" class="control-label col-xs-12 col-sm-2">{:__('Category_id')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-category_id" data-rule="required" data-source="category/selectpage" data-params='{"custom[type]":"repair_worker"}' class="form-control selectpage" name="row[category_id]" type="text" value="">
         </div>
     </div>
     <div class="form-group layer-footer">
