--- a/application/admin/view/bx/repairlist/index.html
+++ b/application/admin/view/bx/repairlist/index.html
@@ -23,7 +23,7 @@
                     <!-- data-operate-edit="{:$auth->check('bx/repairlist/edit')}"  -->
                     <table id="table" class="table table-striped table-bordered table-hover" 
                            data-operate-edit="0" 
-                           data-operate-del="{:$auth->check('bx/repairlist/del')}" 
+                           data-operate-del="0" 
                            width="100%">
                     </table>
                     
