后台前端修改，注释掉一个不用的接口

--- a/application/admin/view/bx/repairlist/detail.html
+++ b/application/admin/view/bx/repairlist/detail.html
@@ -146,7 +146,7 @@
                     </button>
                 </div>
             </div>
-        {/eq}
+        {else/}
         <div class="row no-print">
             <div class="col-xs-12">
                 <a href="invoice-print.html" target="_blank" class="btn btn-default"><i class="fa fa-print"></i> 打印</a>
@@ -155,6 +155,7 @@
                 </button>
             </div>
         </div>
+        {/eq}
         {/case}
         {case value="dispatched"}
         <div class="row">
