--- a/application/admin/view/bx/repairlist/detail.html
+++ b/application/admin/view/bx/repairlist/detail.html
@@ -5,7 +5,7 @@
                 <h2 class="page-header">
                     <input type="text" value="{$row.id}" class="hidden" id="id">
                     <i class="fa fa-gavel" aria-hidden="true"></i> 订单详情
-                <small class="pull-right">{$row.accepted_time}</small>
+                <small class="pull-right">{$row.new_time}</small>
                 </h2>
             </div>
         </div>
@@ -36,9 +36,30 @@
             <div class="col-xs-6">
                 <p class="lead">报修图片</p>
                 <p class="text-muted well well-sm no-shadow" style="margin-top: 10px;">
-                    {foreach name="$row.image" item="vo" key="s"}
-                    <img src={$vo} height="100" width="100">
+                    {foreach name="$row.image" item="vo" key="s"}            
+                    <img src={$vo}  alt="" height="100" width="100" data-toggle="modal" data-target="#{$s}">       
                     {/foreach}
+                    {foreach name="$row.image" item="vo" key="s"}
+                    <!-- Modal -->
+                    <div class="modal fade" id="{$s}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">    
+                            <div class="modal-dialog">        
+                                <div class="modal-content">            
+                                    <div class="modal-header">                
+                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>             
+                                   </div>            
+                                   <div class="modal-body">             
+                                       <img src={$vo}  alt="" style="width:50%;">                                   
+                                   </div>            
+                                   <div class="modal-footer">                
+                                       <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>            
+                                   </div>        
+                               </div><!-- /.modal-content -->    
+                           </div><!-- /.modal-dialog -->
+                       </div>
+                    {/foreach}
+                    <!-- {foreach name="$row.image" item="vo" key="s"}
+                    <img src={$vo} height="100" width="100"> -->
+                    <!-- {/foreach} -->
                 </p>
             </div>           
         </div>
