--- a/application/admin/view/dormitorysystem/index/index.html
+++ b/application/admin/view/dormitorysystem/index/index.html
@@ -65,7 +65,7 @@
         <div class="icon">
         <i class="fa fa-shopping-cart"></i>
         </div>
-        <a href="#" class="small-box-footer">
+        <a href="./dormitorysystem/index/buildingdetail?LH={$vo.LH}" class="small-box-footer btn-dialog">
         查看详情<i class="fa fa-arrow-circle-right"></i>
         </a>
     </div>
@@ -74,8 +74,3 @@
 </div>
 
 
-
-<!-- 
-<div class="row">
-    dfsdfsdfsdf
-    </div> -->
